Import ncp3-gate 6e4729282dd0 Reverted sunwmmsr to 'required' status

--- a/debian/packages/sunwmmsr/debian/control
+++ b/debian/packages/sunwmmsr/debian/control
@@ -1,6 +1,6 @@
 Source: sunwmmsr
 Section: base
-Priority: optional
+Priority: required
 Maintainer: Nexenta Systems <support@nexenta.com>
 Build-Depends: debhelper(>=4.9.5gnusol5)
 
