Import ncp3-gate a24f99b11ce2 Test patch set for b134

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -241,7 +241,6 @@ SUBDIRS += \
 	libzfs		\
 	libzfs_jni	\
 	pyzfs		\
-	pysolaris	\
 	libmapid	\
 	brand		\
 	policykit	\
@@ -365,7 +364,6 @@ MSGSUBDIRS=		\
 	mpss		\
 	pam_modules	\
 	pyzfs		\
-	pysolaris	\
 	rpcsec_gss	\
 	libreparse
 MSGSUBDIRS += \
@@ -654,8 +652,7 @@ sun_fc:		libdevinfo libsysevent libnvpair
 libsun_ima:	libdevinfo libsysevent libnsl
 sun_sas:	libdevinfo libsysevent libnvpair libkstat libdevid
 libgrubmgmt:	libdevinfo libzfs libfstyp
-pyzfs:		libnvpair libzfs
-pysolaris:	libsec libidmap
+pyzfs:		libnvpair libsec libidmap libzfs
 libreparse:	libnvpair
 libhotplug:	libnvpair
 cfgadm_plugins:	libhotplug
