--- a/debian/rules
+++ b/debian/rules
@@ -79,15 +79,13 @@ upload-packages-stamp:
 	@rm -f /etc/apt/sources.list.d/nexenta-on-local.list
 	cp $(PKGDIR)/*.{deb,changes} $(APTDIR)/incoming/hardy-unstable
 	$(APTDIR)/upload
-	@echo
-	@echo "Packages uploaded into local APT repository $(APTDIR)"
-	@echo
-	@echo "Local APT preconfigured. Development upgrades are ready now."
-	@echo "Run the following commands to upgrade:"
-	@echo
-	@echo "echo 'deb file://$(APTDIR)/ hardy-unstable main contrib non-free' > /etc/apt/sources.list.d/nexenta-on-local.list"
-	@echo "apt-clone dist-upgrade"
-	@echo
+	@echo -e "\n\n \
+	Packages uploaded into local APT repository $(APTDIR) \n \
+	Local APT preconfigured. Development upgrades are ready now.\n\n \
+	Run the following commands to upgrade: \n \
+		\"apt-clone dist-upgrade\"" >$(PKGDIR)/Upgrade-instructions
+
+	@echo "Upgrade instructions are available here::$(PKGDIR)/Upgrade-instructions"
 	touch $@
 
 build: build-on build-packages upload-packages build-stamp
