--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1307,6 +1307,7 @@ TRANS_OBJS += mdtrans.o trans_ioctl.o trans_log.o
 ZFS_COMMON_OBJS +=		\
 	arc.o			\
 	bplist.o		\
+	bpobj.o			\
 	dbuf.o			\
 	ddt.o			\
 	ddt_zap.o		\
@@ -1320,6 +1321,7 @@ ZFS_COMMON_OBJS +=		\
 	dnode_sync.o		\
 	dsl_dir.o		\
 	dsl_dataset.o		\
+	dsl_deadlist.o		\
 	dsl_pool.o		\
 	dsl_synctask.o		\
 	dmu_zfetch.o		\
