--- a/usr/src/cmd/fm/modules/common/zfs-monitor/zfs-monitor.conf
+++ b/usr/src/cmd/fm/modules/common/zfs-monitor/zfs-monitor.conf
@@ -19,25 +19,6 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2010 Nexenta Systems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-
-SUBDIRS = cpumem-retire \
-	disk-monitor	\
-	disk-transport	\
-	eversholt 	\
-	ext-event-transport \
-	fabric-xlate \
-	fdd-msg \
-	io-retire	\
-	ip-transport	\
-	sensor-transport \
-	snmp-trapgen	\
-	sp-monitor	\
-	syslog-msgs	\
-	zfs-diagnosis	\
-	zfs-monitor	\
-	zfs-retire
-
-include ../../Makefile.subdirs
