Import ncp3-gate babc6cda92ab Backport critical mptsas fixes from ON.    bkport-fa978d26fcd6-mptsas-fix.patch

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -168,6 +168,7 @@ COMMON_SUBDIRS = \
 	cmd/ipcs \
 	cmd/isaexec \
 	cmd/isalist \
+	cmd/iscsi \
 	cmd/iscsiadm \
 	cmd/iscsid \
 	cmd/iscsitsvc \
@@ -378,6 +379,7 @@ COMMON_SUBDIRS = \
 	lib/libipp \
 	lib/libipsecutil \
 	lib/libiscsit \
+	lib/libiscsitgt \
 	lib/libkmf \
 	lib/libkstat \
 	lib/liblgrp \
