--- a/usr/src/cmd/fs.d/zfs/Makefile
+++ b/usr/src/cmd/fs.d/zfs/Makefile
@@ -20,10 +20,11 @@
 #
 
 #
-# Copyright (c) 2005, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 
-SUBDIRS=	fstyp
+SUBDIRS=	fstyp zfsdle
 
 all:=		TARGET= all
 install:=	TARGET= install
