Import ncp3-gate 2d4eaec32196 Rework mptsas fixes, recovering from mq-induced bustage.

--- a/usr/src/cmd/fm/modules/common/Makefile
+++ b/usr/src/cmd/fm/modules/common/Makefile
@@ -37,6 +37,7 @@ SUBDIRS = cpumem-retire \
 	sp-monitor	\
 	syslog-msgs	\
 	zfs-diagnosis	\
+	zfs-monitor	\
 	zfs-retire
 
 include ../../Makefile.subdirs
