Import ncp3-gate 76f94d998fed re #3238 rb155 backport dnode related improvements    bkport-397e44ebb8a9-dnode-improvements.patch # User Tom Erickson <Tom.Erickson@Sun.COM> # Date 1277404531 25200 6710343 dnode cache should register a dnode_move() callback to limit fragmentation 6583724 dnode_create should not call kmem_cache_constructor directly 6374545 disk write cache flush code overloads buf_t.b_list pointer

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1366,7 +1366,8 @@ ZFS_COMMON_OBJS +=		\
 	zio_checksum.o		\
 	zio_compress.o		\
 	zio_inject.o		\
-	zle.o
+	zle.o			\
+	zrlock.o
 
 ZFS_SHARED_OBJS +=		\
 	zfs_namecheck.o		\
