--- a/debian/packages/sunwiscsitu/debian/control
+++ b/debian/packages/sunwiscsitu/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper(>=4.9.5gnusol5)
 
 Package: sunwiscsitu
 Architecture: solaris-i386
-Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-0), sunwkvm (>=5.11.134-31-0-0), sunwcsr (>=5.11.134-100), sunwckr (>=5.11.134-100), sunwcnetr (>=5.11.134-31-0-0), sunwcsu (>=5.11.134-100), sunwcsd (>=5.11.134-31-0-0), sunwcsl (>=5.11.134-100), sunwcar (>=5.11.134-31-0-0), sunwiscsitr (>=5.11.134-100)
+Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-0), sunwkvm (>=5.11.134-31-0-0), sunwcsr (>=5.11.134-31-0-0), sunwckr (>=5.11.134-31-0-0), sunwcnetr (>=5.11.134-31-0-0), sunwcsu (>=5.11.134-31-0-0), sunwcsd (>=5.11.134-31-0-0), sunwcsl (>=5.11.134-31-0-0), sunwcar (>=5.11.134-31-0-0), sunwiscsitr (>=5.11.134-31-0-0)
 Description: Sun iSCSI COMSTAR Port Provider
  Sun iSCSI COMSTAR Port Provider
  .
