--- a/debian/packages/sunwzfskr/debian/control
+++ b/debian/packages/sunwzfskr/debian/control
@@ -6,7 +6,7 @@ Maintainer: Nexenta Systems <support@nexenta.com>
 Package: sunwzfskr
 Architecture: solaris-i386
 Conflicts: sunwzfsr (<< 5.11.33-1)
-Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-0), sunwkvm (>=5.11.134-31-0-0), sunwcsr (>=5.11.134-31-0-0), sunwckr (>=5.11.134-31-0-1), sunwcsu (>=5.11.134-31-0-0), sunwcsd (>=5.11.134-31-0-0), sunwcsl (>=5.11.134-100)
+Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-0), sunwkvm (>=5.11.134-31-0-0), sunwcsr (>=5.11.134-31-0-0), sunwckr (>=5.11.134-31-0-2), sunwcsu (>=5.11.134-31-0-0), sunwcsd (>=5.11.134-31-0-0), sunwcsl (>=5.11.134-31-0-0)
 Description: ZFS Kernel (Root)
  ZFS kernel root components
  .
