Import ncp3-gate e79141a85232 re #3996 rb452 bkport-368e589460be-nsl-no-scf.patch is missing a delta

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -589,7 +589,7 @@ libidmap:	libadutils libldap5 libavl libsldap libuutil
 libinetcfg:	libnsl libsocket libdlpi
 libiscsit:	libc libnvpair libstmf libuuid libnsl
 libkmf:		libcryptoutil pkcs11
-libnsl:		libmd5 libscf
+libnsl:		libmd5
 libmapid:	libresolv
 libnwam:	libdoor
 librdc:		libsocket libnsl libnsctl libunistat libdscfg
@@ -623,7 +623,7 @@ libwanboot:	libnvpair libresolv libnsl libsocket libdevinfo libinetutil \
 		libdhcputil
 libwanbootutil:	libnsl
 pam_modules:	libproject passwdutil smbsrv
-libscf:		libuutil libmd libgen libsmbios
+libscf:		libuutil libmd libgen libsmbios libnsl
 libinetsvc:	libscf
 librestart:	libuutil libscf
 ../cmd/sgs/libdl:	../cmd/sgs/libconv
