--- a/usr/src/lib/libsecdb/policy.conf
+++ b/usr/src/lib/libsecdb/policy.conf
@@ -43,11 +43,12 @@ CRYPT_ALGORITHMS_ALLOW=1,2a,md5,5,6
 #
 #CRYPT_ALGORITHMS_DEPRECATE=__unix__
 
-# The Solaris default is the traditional UNIX algorithm.  This is not
+# Newer systems use SHA256 for password encryption.
+# The older default is the traditional UNIX algorithm.  This is not
 # listed in crypt.conf(4) since it is internal to libc.  The reserved
 # name __unix__ is used to refer to it.
 #
-CRYPT_DEFAULT=__unix__
+CRYPT_DEFAULT=5
 #
 # These settings determine the default privileges users have.  If not set,
 # the default privileges are taken from the inherited set.
