--- a/usr/src/cmd/fm/fmd/Makefile.fmd
+++ b/usr/src/cmd/fm/fmd/Makefile.fmd
@@ -115,7 +115,8 @@ LINTFLAGS += -mu
 
 $(PROG) := LDFLAGS += -R/usr/lib/fm
 $(PROG) := LDLIBS += -L$(ROOTLIB)/fm -ltopo -ldiagcode -lsysevent -lsmbios \
-		-luuid -lnvpair -lexacct -lnsl -lumem -ldevinfo -lfmd_msg
+		-luuid -lnvpair -lexacct -lnsl -lumem -ldevinfo -lfmd_msg \
+		-lnetsnmp -lnetsnmpagent -lnetsnmphelpers
 
 $(DMOD) := CFLAGS += $(CC_PICFLAGS) -G $(XREGSFLAG)
 $(DMOD) := LDFLAGS += $(ZTEXT) $(ZDEFS) $(MAPFILE-DMOD:%=-M%)
