--- a/usr/src/cmd/netfiles/nsswitch.conf
+++ b/usr/src/cmd/netfiles/nsswitch.conf
@@ -18,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,38 +29,39 @@
 # "hosts:" and "services:" in this file are used only if the
 # /etc/netconfig file has a "-" for nametoaddr_libs of "inet" transports.
 
-# NIS service requires that svc:/network/nis/client:default be enabled
-# and online.
+# DNS service expects that an instance of svc:/network/dns/client be
+# enabled and online.
 
-# the following two lines obviate the "+" entry in /etc/passwd and /etc/group.
-passwd:     files nis
-group:      files nis
+passwd:     files
+group:      files
 
-# consult /etc "files" only if nis is down. 
-hosts:      nis [NOTFOUND=return] files
+# You must also set up the /etc/resolv.conf file for DNS name
+# server lookup.  See resolv.conf(4). For lookup via mdns  
+# svc:/network/dns/multicast:default must also be enabled. See mdnsd(1M)
+hosts:      files dns mdns
 
 # Note that IPv4 addresses are searched for in all of the ipnodes databases
 # before searching the hosts databases.
-ipnodes:    nis [NOTFOUND=return] files
+ipnodes:    files dns mdns
 
-networks:   nis [NOTFOUND=return] files
-protocols:  nis [NOTFOUND=return] files
-rpc:        nis [NOTFOUND=return] files
-ethers:     nis [NOTFOUND=return] files
-netmasks:   nis [NOTFOUND=return] files
-bootparams: nis [NOTFOUND=return] files
-publickey:  nis [NOTFOUND=return] files
+networks:   files
+protocols:  files
+rpc:        files
+ethers:     files
+netmasks:   files
+bootparams: files
+publickey:  files
+# At present there isn't a 'files' backend for netgroup;  the system will 
+#   figure it out pretty quickly, and won't use netgroups at all.
+netgroup:   files
+automount:  files
+aliases:    files
+services:   files
+printers:   user files
 
-netgroup:   nis
+auth_attr:  files
+prof_attr:  files
+project:    files
 
-automount:  files nis
-aliases:    files nis
-
-# for efficient getservbyname() avoid nis
-services:   files nis
-
-printers:	user files nis
-
-auth_attr:  files nis
-prof_attr:  files nis
-project:    files nis
+tnrhtp:     files
+tnrhdb:     files
