Import ncp3-gate e92736d0cc74 re #5827 authentication type is not supported (when joining a domain) re #5431 Lose access to the shares, smbrdr_exchange failed    smbcl-iod-b7f7250e66fe.patch 6944209 Let smbiod run as a service 6948083 Better logging of bad SMB signatures    smbcl-open-6dca3e19cdd6.patch 1282 nsmb_open has a race    smbcl-pipes-96340372b72d.patch 1120 Use real file descriptors for smbfs named pipes.    smbcl-tcon-12cf927830ab.patch 6955216 Negotiate Protocol fails with latest NetApp server 6962072 Tree connect may fail if addr-to-name lookup fails 6962091 Log messages like: ... smb_maperr32: no direct map for... 6962125 Tree connect failed with latest Isilon server 6972321 improve some error messages    smbsrv-eso-c1f01cd09a07.patch 1121 smbsrv should use SPNEGO (outbound authentication)

--- a/usr/src/cmd/fs.d/smbclnt/smbiod-svc/Makefile
+++ b/usr/src/cmd/fs.d/smbclnt/smbiod-svc/Makefile
@@ -18,15 +18,40 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
-# Use is subject to license terms.
-#
-# ident	"%Z%%M%	%I%	%E% SMI"
+# Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
 #
 
-include ../Makefile.com
+#
+# cmd/fs.d/smbclnt/smbiod-svc/Makefile
+#
 
-DYNFLAGS +=	-R/usr/lib/smbsrv
+FSTYPE=		smbfs
+TYPEPROG=	smbiod-svc
 
-install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT)
+include		../../Makefile.fstype
+
+OBJS=	$(TYPEPROG).o
+SRCS=	$(TYPEPROG).c
+POFILE=	$(TYPEPROG).po
+
+CFLAGS += $(CCVERBOSE)
+C99MODE= $(C99_ENABLE)
+
+CPPFLAGS += -I$(SRC)/lib/libsmbfs \
+	-I$(SRC)/uts/common/smbclnt -I$(SRC)/uts/common
+
+# Debugging
+${NOT_RELEASE_BUILD} CPPFLAGS += -DDEBUG
+
+all:	$(TYPEPROG)
+
+catalog:	$(POFILE)
+
+lint:	lint_SRCS
+
+clean:
+	$(RM) $(OBJS) $(POFILE)
+
+.KEEP_STATE:
