--- a/debian/packages/sunwsmbsu/debian/control
+++ b/debian/packages/sunwsmbsu/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper(>=4.9.5gnusol5)
 
 Package: sunwsmbsu
 Architecture: solaris-i386
-Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-100), sunwkvm (>=5.11.134-31-0-100), sunwcsr (>=5.11.134-31-0-100), sunwckr (>=5.11.134-31-0-100), sunwcnetr (>=5.11.134-31-0-100), sunwcsu (>=5.11.134-31-0-100), sunwcsd (>=5.11.134-31-0-100), sunwcsl (>=5.11.134-31-0-100), sunwcar (>=5.11.134-31-0-100), sunwsmbskr (>=5.11.134-31-0-100), sunwsmbsr (>=5.11.134-31-0-100), sunwgss (>=5.11.134-31-0-100), sunwkrbu (>=5.11.134-31-0-100), libxml2
+Depends: ${shlibs:Depends}, sunwcakr (>=5.11.134-31-0-100), sunwkvm (>=5.11.134-31-0-100), sunwcsr (>=5.11.134-31-0-100), sunwckr (>=5.11.134-31-0-100), sunwcnetr (>=5.11.134-31-0-100), sunwcsu (>=5.11.134-31-0-100), sunwcsd (>=5.11.134-31-0-100), sunwcsl (>=5.11.134-31-0-100), sunwcar (>=5.11.134-31-0-100), sunwsmbskr (>=5.11.134-31-2-0), sunwsmbsr (>=5.11.134-31-2-0), sunwsmbfsu (>=5.11.134-31-2-0), sunwgss (>=5.11.134-31-0-100), sunwkrbu (>=5.11.134-31-0-100), libxml2
 Description: SMB Server (Usr)
  SMB Server libraries and commands
  .
