VAAI (XXX ATS support for COMSTAR, YYY Block-copy support for COMSTAR)

--- a/usr/src/cmd/mdb/intel/amd64/stmf_sbd/Makefile
+++ b/usr/src/cmd/mdb/intel/amd64/stmf_sbd/Makefile
@@ -20,12 +20,15 @@
 #
 #
 # Copyright (c) 2008, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2011 Nexenta Systems, Inc.  All rights reserved.
+#
 
 MODULE = stmf_sbd.so
 MDBTGT = kvm
 
 MODSRCS = stmf_sbd.c
 
+CLSTMFSBDBASE = ../../../../../../nza-closed/uts/common/io/comstar/lu/stmf_sbd
 UTSBASE = ../../../../../uts
 COMSTARBASE = $(UTSBASE)/common/io/comstar
 STMFSBDBASE = $(COMSTARBASE)/lu/stmf_sbd
@@ -36,3 +39,4 @@ include ../../Makefile.amd64
 include ../../../Makefile.module
 
 CPPFLAGS += -I$(UTSBASE)/common -I$(UTSBASE)/common/sys -I$(STMFSBDBASE)
+CPPFLAGS += -I$(CLSTMFSBDBASE)
