--- a/usr/src/uts/Makefile.uts
+++ b/usr/src/uts/Makefile.uts
@@ -22,6 +22,7 @@
 #
 # Copyright (c) 1991, 2010, Oracle and/or its affiliates. All rights reserved.
 # Copyright (c) 2011 Bayard G. Bell. All rights reserved.
+# Copyright 2011 Nexenta Systems, Inc.  All rights reserved.
 #
 
 #
@@ -42,6 +43,10 @@ DTEXTDOM =
 #
 # 	Keep references to $(SRC)/common relative.
 COMMONBASE=	$(UTSBASE)/../common
+
+#
+#	Have an NZA_UTS pointer for NZA kernel sources.
+NZA_UTS=	$(NZA_CLOSED)/uts
 
 #
 #	Setup build-specific vars
