--- a/usr/src/uts/sparc/stmf_sbd/Makefile
+++ b/usr/src/uts/sparc/stmf_sbd/Makefile
@@ -59,6 +59,8 @@ MODSTUBS_DIR	 = $(OBJS_DIR)
 LDFLAGS		+= -dy -Ndrv/stmf -Nfs/zfs
 
 INC_PATH	+= -I$(UTSBASE)/common/fs/zfs
+INC_PATH	+= -I$(UTSBASE)/common/io/comstar/lu/stmf_sbd
+INC_PATH	+= -I$(NZA_UTS)/common/io/comstar/lu/stmf_sbd
 
 C99MODE=	-xc99=%all
 C99LMODE=	-Xc99=%all
