Import ncp3-gate 769a2f980c33 re #6231 should allow domain groups as member of local groups    mdb-illumos-1516.patch 1516 mdb dcmd to list kshare_t's under an smbsrv instance    mdb-illumos-1525.patch 1525 Need an easier way to see SIDs in cred_t    smbsrv-domgrp-6231.patch 1526 should allow domain groups as member of local groups

--- a/usr/src/cmd/mdb/common/modules/genunix/Makefile.files
+++ b/usr/src/cmd/mdb/common/modules/genunix/Makefile.files
@@ -19,6 +19,7 @@
 # CDDL HEADER END
 #
 #
+# Copyright 2011 Nexenta Systems, Inc.  All rights reserved.
 # Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
@@ -35,6 +36,7 @@ GENUNIX_SRCS =		\
 	combined.c	\
 	contract.c	\
 	cpupart.c	\
+	cred.c		\
 	ctxop.c		\
 	cyclic.c	\
 	damap.c		\
