--- a/usr/src/cmd/mdb/intel/amd64/stmf_sbd/Makefile
+++ b/usr/src/cmd/mdb/intel/amd64/stmf_sbd/Makefile
@@ -28,7 +28,6 @@ MDBTGT = kvm
 
 MODSRCS = stmf_sbd.c
 
-CLSTMFSBDBASE = ../../../../../../nza-closed/uts/common/io/comstar/lu/stmf_sbd
 UTSBASE = ../../../../../uts
 COMSTARBASE = $(UTSBASE)/common/io/comstar
 STMFSBDBASE = $(COMSTARBASE)/lu/stmf_sbd
@@ -38,5 +37,7 @@ include ../../../../Makefile.cmd.64
 include ../../Makefile.amd64
 include ../../../Makefile.module
 
+include $(NZA_MAKEDEFS)
+
 CPPFLAGS += -I$(UTSBASE)/common -I$(UTSBASE)/common/sys -I$(STMFSBDBASE)
-CPPFLAGS += -I$(CLSTMFSBDBASE)
+CPPFLAGS += $(NZA_STMFSBDBASE_FLAGS)
