Import ncp3-gate 4e1b098e84e6 closes #9673, rb2849 - back-port to stable-3.1    sd-pm-disable.patch

--- a/usr/src/uts/intel/io/scsi/targets/sd.conf
+++ b/usr/src/uts/intel/io/scsi/targets/sd.conf
@@ -55,3 +55,6 @@ name="sd" parent="ahci";
 name="sd" parent="si3124";
 name="sd" parent="marvell88sx";
 name="sd" parent="arcmsr";
+
+# Disable power management (log sense, power condition)
+pm-capable=0;
