ZFS plus work: special vdevs, cos, cos/vdev properties

--- a/usr/src/Makefile.nza
+++ b/usr/src/Makefile.nza
@@ -39,3 +39,6 @@
 
 # For the stmf_sbd mdb(1) modules, no extra includes are needed.
 NZA_STMFSBDBASE_FLAGS=
+NZA_ZFSPLUSBASE_FLAGS=
+NZA_ZFSPLUS_SHARED_OBJS=libzfs_closed_stubs.o
+NZA_ZFSPLUS_SHARED_SRCS=
