re #11201 nss: need local netgroup implementation

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -20,7 +20,7 @@
 #
 
 # Copyright (c) 1989, 2010, Oracle and/or its affiliates. All rights reserved.
-# Copyright 2010 Nexenta Systems, Inc.  All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc.  All rights reserved.
 # Copyright 2011 Joyent, Inc.  All rights reserved.
 # Copyright (c) 2012 by Delphix. All rights reserved.
 
@@ -284,6 +284,7 @@ COMMON_SUBDIRS=		\
 	nohup		\
 	nsadmin		\
 	nscd		\
+	nsstest		\
 	oamuser		\
 	oawk		\
 	od		\
