Import ncp3-gate db3db9b8ddc3 closes #10489 #11126 rb3501 openipmi driver ported from joyent

--- a/usr/src/uts/intel/Makefile.files
+++ b/usr/src/uts/intel/Makefile.files
@@ -22,6 +22,7 @@
 #
 # Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+# Copyright (c) 2012, Joyent, Inc. All rights reserved.
 #
 
 #
@@ -255,6 +256,11 @@ CORE_PCBE_OBJS = core_pcbe.o
 #	AMR module
 #
 AMR_OBJS = amr.o
+
+#
+#	IPMI module
+#
+IPMI_OBJS +=  ipmi_main.o ipmi.o ipmi_kcs.o
 
 #
 #	IOMMULIB module
