--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -19,9 +19,10 @@
 # CDDL HEADER END
 #
 
+#
 # Copyright (c) 2005, 2010, Oracle and/or its affiliates. All rights reserved.
-
-# Copyright 2011 Nexenta Systems, Inc.  All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc. All rights reserved.
+#
 
 #
 #	This makefile contains the common definitions for all intel
@@ -439,6 +440,7 @@ DRV_KMODS	+= fcsm
 DRV_KMODS	+= fp
 DRV_KMODS	+= qlc
 DRV_KMODS	+= iscsi
+DRV_KMODS	+= pvscsi
 
 #
 #	PCMCIA specific module(s)
