re #10798 rb3177 Integrate vmxnet3s driver to nza-kernel

--- a/usr/src/uts/intel/Makefile.files
+++ b/usr/src/uts/intel/Makefile.files
@@ -213,8 +213,9 @@ ACPICA_OBJS	+= dbcmds.o dbdisply.o \
 		   evglock.o evgpeinit.o evgpeutil.o evxfgpe.o exdebug.o \
 		   hwpci.o utdecode.o utosi.o utxferror.o
 
-PVSCSI_OBJS += pvscsi.o
+PVSCSI_OBJS=	pvscsi.o
 
+VMXNET3S_OBJS=	vmxnet3s_main.o vmxnet3s_rx.o vmxnet3s_tx.o vmxnet3s_utils.o
 
 AGP_OBJS += agpmaster.o
 FBT_OBJS += fbt.o
@@ -285,3 +286,8 @@ MCAMD_OBJS	+= \
 	mcamd_dimmcfg.o \
 	mcamd_subr.o \
 	mcamd_pcicfg.o
+
+#
+# VMXNET3S
+#
+
