--- a/usr/src/uts/intel/vmxnet3s/Makefile
+++ b/usr/src/uts/intel/vmxnet3s/Makefile
@@ -29,6 +29,8 @@ INSTALL_TARGET=	$(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
 LDFLAGS	+=	-dy -N misc/mac
 
+CERRWARN +=	-_gcc=-Wno-switch
+
 LINTTAGS +=	-erroff=E_BAD_PTR_CAST_ALIGN
 LINTTAGS +=	-erroff=E_CONSTANT_CONDITION
 LINTTAGS +=	-erroff=E_ASSIGN_NARROW_CONV
