--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -19,9 +19,11 @@
 # CDDL HEADER END
 #
 
-# Copyright 2011 Nexenta Systems, Inc.  All rights reserved.
+#
 # Copyright (c) 1989, 2010, Oracle and/or its affiliates. All rights reserved.
 # Copyright (c) 2012 by Delphix. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc.  All rights reserved.
+#
 
 include ../Makefile.master
 
@@ -149,6 +151,7 @@ SUBDIRS += \
 	krb5	.WAIT	\
 	libsmbfs	\
 	libfcoe		\
+	libaoe		\
 	libsrpt		\
 	libstmf		\
 	libstmfproxy	\
@@ -455,6 +458,7 @@ HDRSUBDIRS=		\
 	libsocket	\
 	libsqlite	\
 	libfcoe		\
+	libaoe		\
 	libsrpt		\
 	libstmf		\
 	libstmfproxy	\
