--- a/usr/src/man/Makefile
+++ b/usr/src/man/Makefile
@@ -10,6 +10,9 @@
 #
 
 # Copyright 2011, Richard Lowe
+# Copyright 2012 Nexenta Systems, Inc. All rights reserved.
+
+include $(NZA_MAKEDEFS)
 
 SUBDIRS=man1		\
 	man1b		\
@@ -94,6 +97,8 @@ SUBDIRS=man1		\
 	man9f		\
 	man9p		\
 	man9s
+
+$(NZA_KMODS)SUBDIRS += $(NZA_CLOSED_MAN)
 
 .PARALLEL: $(SUBDIRS)
 
