--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -18,8 +18,10 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright (c) 1989, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc. All rights reserved.
 #
 
 include $(SRC)/uts/Makefile.uts
@@ -70,6 +72,7 @@ CHKHDRS=			\
 	aio_impl.h		\
 	aio_req.h		\
 	aiocb.h			\
+	aoe.h			\
 	ascii.h			\
 	asynch.h		\
 	atomic.h		\
