--- a/usr/src/uts/intel/Makefile
+++ b/usr/src/uts/intel/Makefile
@@ -20,8 +20,12 @@
 #
 # uts/intel/Makefile
 #
-# Copyright (c) 1999, 2010, Oracle and/or its affiliates. All rights reserved.
+
 #
+# Copyright (c) 1999, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc.  All rights reserved.
+#
+
 #	This makefile drives the production of all implementation architecture
 #	independent modules for Intel processors.
 
@@ -34,6 +38,7 @@ LINT_KMODS_X2	= $(LINT_KMODS_X1:smbfs=)
 LINT_KMODLIBS	= $(LINT_KMODS_X2:e1000g=)
 LINT_LIBS	= $(LINT_LIB) $(GEN_LINT_LIB) \
 		  $(LINT_KMODLIBS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
+		  $(NZA_LINT_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
 		  $(CLOSED_LINT_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) 
 
 # EXPORT DELETE START
@@ -74,10 +79,10 @@ install_h.prereq	:=	TARGET= install_h
 .KEEP_STATE:
 
 .PARALLEL:	$(PARALLEL_KMODS) $(CLOSED_KMODS) $(SVVS) $(XMODS) \
-		$(CLOSED_XMODS) config $(LINT_DEPS)
+		$(NZA_KMODS) $(CLOSED_XMODS) config $(LINT_DEPS)
 
 def all install clean clobber modlist: $(KMODS) $(CLOSED_KMODS) \
-	$(SVVS) $(XMODS) $(CLOSED_XMODS) config
+	$(SVVS) $(XMODS) $(NZA_KMODS) $(CLOSED_XMODS) config
 
 
 #
@@ -133,13 +138,16 @@ lint.prereq: FRC
 genunix: $(PRIVS_C)
 
 modlintlib clean.lint: $(LINT_KMODS) $(CLOSED_LINT_KMODS) $(SVVS) \
-	$(XMODS) $(CLOSED_XMODS)
+	$(NZA_LINT_KMODS) $(XMODS) $(CLOSED_XMODS)
 
 $(KMODS) $(SUBDIRS) config:	FRC
 	@cd $@; pwd; $(MAKE) $(NO_STATE) $(TARGET)
 
 $(CLOSED_KMODS):	FRC
 	cd $(CLOSED)/uts/intel/$@; pwd; $(MAKE) $(NO_STATE) $(TARGET)
+
+$(NZA_KMODS):	FRC
+	cd $(NZA_UTS)/intel/$@; pwd; $(MAKE) $(NO_STATE) $(TARGET)
 
 $(XMODS):	FRC
 	@if [ -f $@/Makefile  ]; then \
@@ -194,3 +202,4 @@ EXPORT_SRC:
 # EXPORT DELETE END
 
 include ../Makefile.targ
+include $(NZA_MAKEDEFS)
