--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -20,6 +20,7 @@
 #
 
 # Copyright (c) 2005, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc.  All rights reserved.
 
 
 #
@@ -306,6 +307,7 @@ DRV_KMODS	+= qlge
 DRV_KMODS	+= stmf
 DRV_KMODS	+= stmf_sbd
 DRV_KMODS	+= fct
+DRV_KMODS	+= aoe aoeblk
 DRV_KMODS	+= fcoe
 DRV_KMODS	+= fcoet
 DRV_KMODS	+= fcoei
