--- a/usr/src/cmd/Makefile.check
+++ b/usr/src/cmd/Makefile.check
@@ -19,7 +19,10 @@
 # CDDL HEADER END
 #
 
+#
 # Copyright (c) 2009, 2010, Oracle and/or its affiliates. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc. All rights reserved.
+#
 
 include ../Makefile.master
 
@@ -29,6 +32,7 @@ include ../Makefile.master
 #
 MANIFEST_TOPDIRS=			\
 	acctadm				\
+	aoesvc				\
 	auditd				\
 	bnu				\
 	consadm				\
