--- a/usr/src/man/man1m/Makefile
+++ b/usr/src/man/man1m/Makefile
@@ -33,6 +33,7 @@ COMMON_MANFILES = 	6to4relay.1m		\
 	 	 	add_allocatable.1m	\
 	 	 	add_drv.1m		\
 	 	 	addbadsec.1m		\
+			aoeadm.1m		\
 	 	 	arp.1m			\
 	 	 	atohexlabel.1m		\
 	 	 	audit.1m		\
