--- a/usr/src/uts/common/io/mr_sas/mr_sas.conf
+++ b/usr/src/uts/common/io/mr_sas/mr_sas.conf
@@ -1,13 +1,15 @@
 #
-# Copyright (c) 2008-2009, LSI Logic Corporation.
+# Copyright (c) 2008-2012, LSI Logic Corporation.
 # All rights reserved.
-#
-# Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
-# Use is subject to license terms.
 #
 
 #
 # mr_sas.conf for sol 10 (and later) for all supported architectures
 #
-# global definitions
+
+# MSI specific flag. Default is "yes".
+# mrsas-enable-msi="yes";
+
+# Fast-Path specific flag. Default is "yes".
+# mrsas-enable-fp="yes";
 
