re #8813 rb3805 Failed to set DHCP on bnx0 network interface

--- a/usr/src/Makefile
+++ b/usr/src/Makefile
@@ -142,6 +142,7 @@ closedbins: bldtools $(ROOTDIRS) FRC
 		( cd $(ROOT); $(CTFSTRIP) $$(cd $$CLOSED_ROOT; $(FIND) \
 		    ./kernel ./usr/kernel ./platform/*/kernel -type f -a -perm -u+x | \
 		    $(EGREP) -vf $(CODEMGR_WS)/exception_lists/closed-bins) ); \
+		( cd $(ROOT); $(SED) -i -e "/^#mtu=/s/^#//" ./kernel/drv/bnx.conf ); \
 	fi
 
 #
