replace aoe_port_t by aoe_eport_t, port_t by aoe_port_t; define aoe_rsvhdr_t, aoe_cfghdr_t (fix lint, sparc Makefiles)

--- a/usr/src/uts/intel/aoe/Makefile
+++ b/usr/src/uts/intel/aoe/Makefile
@@ -36,6 +36,8 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 # Overrides and depends_on
 LDFLAGS		+= -r -dy -N misc/dls -N misc/mac 
 
+LINTTAGS	+= -erroff=E_BAD_PTR_CAST_ALIGN
+
 .KEEP_STATE:
 
 # Default build targets
