--- a/usr/src/uts/sparc/aoeblk/Makefile
+++ b/usr/src/uts/sparc/aoeblk/Makefile
@@ -26,7 +26,7 @@ ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
 CONF_SRCDIR	= $(UTSBASE)/common/io/aoe
 
 # Include common rules.
-include		../Makefile.intel
+include		../Makefile.sparc
 
 # Define targets
 ALL_TARGET	= $(BINARY) $(SRC_CONFFILE)
@@ -35,6 +35,8 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
 # Overrides and depends_on
 LDFLAGS		+= -r -dy -N drv/aoe -N drv/blkdev
+
+LINTTAGS	+= -erroff=E_BAD_PTR_CAST_ALIGN
 
 .KEEP_STATE:
 
